# The following lines of boilerplate have to be in your project's
# CMakeLists in this exact order for cmake to work correctly

set(COMPONENT_SRCDIRS 
	"gsl/blas"
	"gsl/specfunc"
	"gsl/err"
	"gsl/sys"
	"gsl/poly"
                      )

set(COMPONENT_ADD_INCLUDEDIRS
	"."
	"gsl"
	"gsl/blas"
	"gsl/block"
	"gsl/bspline"
	"gsl/bst"
	"gsl/cblas"
	"gsl/cdf"
#	"gsl/cheb"
	"gsl/combination"
	"gsl/complex"
	"gsl/const"
	"gsl/deriv"
	"gsl/dht"
	"gsl/diff"
	"gsl/doc"
	"gsl/eigen"
	"gsl/err"
	"gsl/fft"
	"gsl/filter"
	"gsl/fit"
	"gsl/gsl"
	"gsl/histogram"
	"gsl/ieee-utils"
	"gsl/integration"
	"gsl/interpolation"
	"gsl/linalg"
	"gsl/matrix"
	"gsl/min"
	"gsl/monte"
	"gsl/movstat"
	"gsl/multifit"
	"gsl/multifit_nlinear"
	"gsl/multilarge"
	"gsl/multilarge_nlinear"
	"gsl/multimin"
	"gsl/multiroots"
	"gsl/multiset"
	"gsl/ntuple"
	"gsl/ode-initval"
	"gsl/ode-initval2"
	"gsl/permutation"
	"gsl/poly"
	"gsl/qrng"
	"gsl/randist"
	"gsl/rng"
	"gsl/roots"
	"gsl/rstat"
	"gsl/siman"
	"gsl/sort"
	"gsl/spblas"
	"gsl/specfunc"
	"gsl/splinalg"
	"gsl/spmatrix"
	"gsl/statistics"
	"gsl/sum"
	"gsl/sys"
	"gsl/test"
	"gsl/utils"
	"gsl/vector"
	"gsl/wavelet"
    )
    
set(COMPONENT_SRCEXCLUDE_1
    "gsl/specfunc/legendre_source.c"
    )

idf_component_register(
  SRC_DIRS "${COMPONENT_SRCDIRS}"
  INCLUDE_DIRS "${COMPONENT_ADD_INCLUDEDIRS}"
  EXCLUDE_SRCS "${COMPONENT_SRCEXCLUDE_1}"
)